--- a/pom.xml
+++ b/pom.xml
@@ -78,11 +78,11 @@
         </dependency>
 
         <!--微信支付 APIv2 SDK-->
-        <!--<dependency>-->
-            <!--<groupId>com.github.wxpay</groupId>-->
-            <!--<artifactId>wxpay-sdk</artifactId>-->
-            <!--<version>0.0.3</version>-->
-        <!--</dependency>-->
+        <dependency>
+            <groupId>com.github.wxpay</groupId>
+            <artifactId>wxpay-sdk</artifactId>
+            <version>0.0.3</version>
+        </dependency>
 
 
         <dependency>
