--- a/src/main/resources/wxpay.properties
+++ b/src/main/resources/wxpay.properties
@@ -14,7 +14,7 @@ wxpay.appid=wx74862e0dfcf69954
 wxpay.domain=https://api.mch.weixin.qq.com
 # 接收结果通知地址
 # 注意：每次重新启动ngrok，都需要根据实际情况修改这个配置
-wxpay.notify-domain=https://5bc7-119-123-242-135.ngrok.io
+wxpay.notify-domain=https://adc6-113-87-160-181.ngrok.io
 
 # APIv2密钥
 wxpay.partnerKey: T6m9iK73b0kn9g5v426MKfHQH7X8rKwb
